Fixed overlap bug in footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -357,11 +357,6 @@ a:hover {
     font-family: 'Montserrat', sans-serif;
 }
 
-/* #pythonLogo, #djangoLogo, #diplomaIcon {
-    max-width: 300px;
-    height: 200px;
-} */
-
 #diplomaProgressBar {
     text-align: center;
     padding-right: 18%;
@@ -684,7 +679,7 @@ a:hover {
 
 #footerNametagLink {
     width: 105%;
-    height: 102%;
+    height: 100%;
 }
 
 #footerCv {
